--- a/css/global.css
+++ b/css/global.css
@@ -5,7 +5,7 @@
 :root {
     --fonte-padrao: Consolas;
     --tamanho-da-fonte: 16px;
-    --cor-do-fundo: #0e0202;
+    --cor-do-fundo: #b18a8a;
 }
 
 * {
