--- a/css/global.css
+++ b/css/global.css
@@ -2,10 +2,13 @@
 
 
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css');
+
 :root {
-    --fonte-padrao: Consolas;
+    --fonte-padrao: sans-serif;
     --tamanho-da-fonte: 16px;
-    --cor-do-fundo: #b18a8a;
+    --cor-do-fundo: #3c91c9;
+    --cor-link-padrao: limegreen;
+    --cor-link-hover: orange;
 }
 
 * {
@@ -13,7 +16,9 @@
     outline: none;
 }
 
-html, body, #wrap {
+html,
+body,
+#wrap {
     position: relative;
     height: 100%;
     width: 100%;
@@ -22,8 +27,22 @@ html, body, #wrap {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
 }
+
+a {
+    color: var(--cor-link-padrao);
+    text-decoration: none;
+}
+
+a:hover {
+    color: var(--cor-link-hover);
+}
+form input, form button {
+    font-family: inherit;
+    font-size: inherit;
+    padding: .35rem .5rem;
+}
 body {
-background: var(--cor-do-fundo);
+    background: var(--cor-do-fundo);
 }
 
 #wrap {
@@ -33,4 +52,78 @@ background: var(--cor-do-fundo);
 
 main {
     flex-grow: 1;
+}
+
+header {
+    background-color: red;
+}
+
+header img {
+    display: block;
+    /* 4 * 16 = 64 pixels */
+    height: 4rem;
+    width: auto;
+    margin: .5rem 1rem .5rem .5rem;
+}
+
+header div {
+    display: flex;
+    align-items: center;
+}
+
+header h1 {
+    font-size: 1.5rem;
+    margin: 0;
+    color: #000;
+}
+
+header form {
+    background-color: #000;
+    padding: 1rem;
+    display: flex;
+}
+header form input {
+    flex-grow: 1;
+    border: none;
+    border-radius: .3rem 0 0 .3rem;
+}
+
+header form button {
+    border: none;
+    border-radius: 0 .3rem .3rem 0;
+    background-color: #ddd;
+    cursor: pointer;
+}
+/*menu principal*/
+nav{
+    display: flex;
+}
+nav img {
+    height: 1.5rem;
+    width: 1.5rem;
+}
+nav i {
+    font-size: 2rem;
+}
+nav a {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1rem;
+    color: #000;
+}
+
+nav a:hover {
+    color: orange;
+    background-color: #000;
+}
+nav a:first-child {
+    margin-right: auto;
+}
+nav span {
+    margin-top: .5rem;
+}
+/*Conteúdo central*/
+main {
+    background-color: purple;
 }
